# pie_diabetico

./: .gitignore  PartA.csv  PartB.csv  PartB_infection.csv  make_unique.csv  notas.md  organizar.py  pyproject.toml
env/: create_env.sh
src/: __main__.py  pyrightconfig.json
src/diabetes_foot_classification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/evaluation/: metrics.py  pipeline.py  train.py  utils.py
src/ingest/: dataloader.py  dataset.py  discover.py  main.py  pipeline.py  split.py
src/model/: Optim.py  lossess.py  pipeline.py  vgg16.py
src/preprocess/: filters.py
src/utils/: make_folders.py  plots.py  write_info.py
