[project]
name="diabetes-foot-classification"
version="0.1.0"
description="Binary classification of diabetic foot by the dataset PartA usin CNNs"
requires-python =">=3.10,<3.13"
dependencies = [
  "torch==2.0.1",
  "torchvision==0.15.2",
  "numpy==1.26.4",
  "opencv-python==4.8.1.78",
  "pillow",
  "scikit-learn",
  "matplotlib",
  "tqdm",
]
[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
